fix start command in README.md